--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,18 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="author" content="Diana Gutiérrez">
+  <meta name="description"
+    content="Conway's Game of life implemented with React. The code contains no loops and no switch or if-statements.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="game, life, react, js, without if, without loop, conway, no-ifs, no-cicles">
+  <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Game of Life</title>
+  <title>Conway's Game of Life</title>
 </head>
 
 <body>
